[package]
name = "chat_rsa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }  # Para serialização (JSON)
serde_json = "1.0"  # Manipulação de JSON
rand = "0.8"        # Geração de números aleatórios
anyhow = "1.0"      # Tratamento de erros simples
bincode = "1.3"  # Para serialização binária eficiente
hex = "0.4"  # Para conversão hexadecimal
ratatui = "0.25"
crossterm = "0.27"